geo-aeo-17: add manual delete controls
